--- a/react-app/src/components/ProfileButtonModal/ProfileButtonModal.css
+++ b/react-app/src/components/ProfileButtonModal/ProfileButtonModal.css
@@ -95,10 +95,11 @@
   position: relative;
   transition: background-color 0.2s ease;
   padding: 5px;
-  left: -40px;
-  width: 230px;
+  left: 0;
+  width: 100%;
   border-bottom-left-radius: 1px;
   border-bottom-right-radius: 1px;
+  box-sizing: border-box;
 }
 
 .div-link:hover {
@@ -113,13 +114,13 @@
   position: relative;
   display: flex;
   align-items: center;
-  padding: 20px;
   background-color: #f0f0f0;
   border-bottom: 1px solid #dcdcdc;
   padding: 15px;
-  left: -40px;
-  width: 230px;
+  left: 0;
+  width: 100%;
   height: 30px;
+  box-sizing: border-box;
 }
 
 .profile-icon {
@@ -153,10 +154,11 @@
   position: relative;
   transition: background-color 0.2s ease;
   padding: 5px;
-  left: -40px;
-  width: 230px;
+  left: 0;
+  width: 100%;
   border-bottom-left-radius: 1px;
   border-bottom-right-radius: 1px;
+  box-sizing: border-box;
 }
 
 
